--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
-/* *{
-  background-color: limegreen;
-} */
+*{
+
+}
 .app{
-  background: yellowgreen;
+  min-height: 100vh;
+  display: flex;
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
 .TweetScreen{
+  height: 300px;
+  width: 300px;
   border: 5px,black;
   color: black;
   background-color: aliceblue;
+  border-radius: 30px;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-around;
+  align-items: center;
 }
+
