--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 *{
 
 }
+.header{
+}
 .app{
   min-height: 100vh;
   display: flex;
   background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  justify-content: space-around;
+  align-items: center;
 }
 .TweetScreen{
   height: 300px;
@@ -12,10 +16,11 @@
   border: 5px,black;
   color: black;
   background-color: aliceblue;
-  border-radius: 30px;
+  border-radius: 50px;
   display: flex;
-  flex-direction:row;
+  flex-direction:column;
   justify-content: space-around;
   align-items: center;
+  margin-right: 20px;
 }
 
