--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-*{
+/* *{
 
 }
 .header{
@@ -22,5 +22,6 @@
   justify-content: space-around;
   align-items: center;
   margin-right: 20px;
+  margin-left: 20px
 }
-
+ */
