--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,6 @@
 }
 .header{
 }
-.app{
-  min-height: 100vh;
-  display: flex;
-  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
-  justify-content: space-around;
-  align-items: center;
-}
 .TweetScreen{
   height: 300px;
   width: 300px;
@@ -25,3 +18,10 @@
   margin-left: 20px
 }
  */
+ .App{
+  min-height: 100vh;
+  display:flex;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+  justify-content: space-around;
+  align-items: center;
+}
