--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,38 @@
-/* *{
+.App {
+  text-align: center;
+}
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
-.header{
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
-.TweetScreen{
-  height: 300px;
-  width: 300px;
-  border: 5px,black;
-  color: black;
-  background-color: aliceblue;
-  border-radius: 50px;
-  display: flex;
-  flex-direction:column;
-  justify-content: space-around;
-  align-items: center;
-  margin-right: 20px;
-  margin-left: 20px
-}
- */
- .App{
+
+.App-header {
+  background-color: #282c34;
   min-height: 100vh;
-  display:flex;
-  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-  justify-content: space-around;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
