--- a/clerk-react-authentiaction-template/src/index.css
+++ b/clerk-react-authentiaction-template/src/index.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-Regular.woff2") format("woff2"),
+    url("/fonts/Roboto-Regular.woff") format("woff"),
+    url("/fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .spinner {
   display: flex;
   align-items: center;
@@ -10,4 +23,10 @@
   align-items: center;
   justify-content: right;
   padding: 8px 16px 0 0;
+}
+
+.index-route-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
